lab2/README
Name: Yifan Chen
USC NetID: ychen865
CSCI 455 Fall 2019
Lab 2

Note: On-campus students can put their answers to the lab questions in this file, or use a piece of paper they can show to their lab TA.  DEN students will need to put their answers in this README, so they will get submitted.


1.0
Yifan Chen, Ashley Liu 29950

1.1
import java.util.Calendar;
import java.util.GregorianCalendar;

1.2
GregorianCalendar gcal = new GregorianCalendar(1995, 0, 20);

1.3
System.out.print(gcal.get(Calendar.MONTH)+1+"/"+gcal.get(Calendar.DATE)+"/"+gcal.get(Calendar.YEAR));

1.4
0

1.5
gcal.add(Calendar.DATE, 20);

2.1
Date.java:5: error: Date is already defined in this compilation unit                                                                                     
import java.util.Date;                                                                                                                                   
^                                                                                                                                                        
Date.java:12: error: cannot find symbol                                                                                                                  
        gcal.add(calendar.DATE, 20);                                                                                                                     
                 ^                                                                                                                                       
  symbol:   variable calendar                                                                                                                            
  location: class Date                                                                                                                                   
2 errors 

3.1
Birthday.java:24: error: ';' expected                                                                                                                    
          System.out.println("Your birthday has not yet happened this year.")                                                                            
                                                                             ^                                                                           
1 error
Date.java:5: error: Date is already defined in this compilation unit                                                                                     
import java.util.Date;                                                                                                                                   
^                                                                                                                                                        
Date.java:12: error: cannot find symbol                                                                                                                  
        gcal.add(calendar.DATE, 20);                                                                                                                     
                 ^                                                                                                                                       
  symbol:   variable calendar                                                                                                                            
  location: class Date                                                                                                                                   
2 errors

3.2
2 16 1996 happened
3 16 1997 happened
10 10 2001 not yet happened



